--- a/notes-tiddlywiki.html
+++ b/notes-tiddlywiki.html
@@ -204,7 +204,7 @@ Error message and password prompt
 {"created":"20220620012350022","text":"* [[Server-issued capabilities]]\n**  for save/load to work, tools need to be issued this way also\n* [[Tool issued capabilities]]\n* [[Vehicle issued capabilities]]\n","tags":"","title":"Architectures","modified":"20220620012755401"},
 {"created":"20220620020444782","text":"Breaks joints on any structure to which it is applied.","title":"Damage Structures","modified":"20220620020459533"},
 {"created":"20220620001623977","text":"* [[Lily's Obby]]\n** [[Magic]]\n** [[Save/Load]]\n** [[DailyLogin]]\n* [[Ava's Roleplay]]\n** [[Unicorns]]","tags":"","title":"Games","modified":"20220620001915978"},
-{"created":"20220620020116471","text":"* Burn\n** Options : [[Damage Structures]], Spreading, Injure Characters [ how much ], Self Extinguish [ how long ]\n* Lightning\n** Options : Injure Characters [ how much ], Damage Structures, Blast [ how far ]\n","title":"Magic","modified":"20220620020436803"}
+{"created":"20220620020116471","text":"* Burn\n** Options : [[Damage Structures]], Spreading, Injure Characters [ how much ], Self Extinguish [ how long ]\n* Lightning\n** Options : Injure Characters [ how much ], Damage Structures, Blast [ how far ]\n* Tornado\n** Options : Injure Characters [ how much ], Area of Effect [ how much ], Damage Structures\n* Telekinesis\n** Options : How much force?, Injure Characters\n","title":"Magic","modified":"20220620020716856"}
 ]</script><div id="storeArea" style="display:none;"></div>
 <!--~~ Library modules ~~-->
 <div id="libraryModules" style="display:none;">
